--- a/style.css
+++ b/style.css
@@ -19,51 +19,13 @@ body{
     min-height: 100vh;
 }
 
-.wrapper{
-   display: incline-flex;
-   
+.text-box{
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    right: 35%;
+}
 
-    }
-
-    .wrapper .static-txt{
-        color: #fff;
-        font-size:60px;
-        font-weight: 400;
-    }
-    .wrapper .dynamic-txts{
-        margin-left: 15px;
-        height: 90px;
-        line-height: 90px;
-        background: red;
-        overflow: hidden;
-    }
-    .dynamic-txts li{
-        color: #fc6d6d;
-        list-style: none;
-        font-size: 60px;
-        font-weight: 500;
-    }
-    .dynamic-txts li span{
-        position: relative;
-
-    }
-    .dynamic-txts li span::after{
-        content: "";
-        position: absolute;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        background: #343F4F;
-        border-left: 2px solid #fc6d6d;
-        animation: typing 1.5s steps(10) infinite;
-    }
-
-    @keyframes typing{
-        100%{
-            left: 100%;
-            margin: 0 -35px 0 35px;
-        }
-    }
 
 .menu{
     width: 20%;
