--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
 .main{
     width: 100%;
     height: 100vh;
-    display: flex;
-    text-align: center;
     background-color: #252839;
 }
 body{
@@ -28,32 +26,34 @@ body{
 
 
 .menu{
-    width: 20%;
+     justify-content: space-around;
+    width: 100%;
+     min-height: 7vh;
     background-color: #121227;
 }
 #logo{
     color: #fff;
-    font-size: 30px;
-    letter-spacing: 4px;
-    padding: 40px;
-    background-color: #000;
-
+    font-size: 20px;
+    letter-spacing: 2px;
+    float: left;
+    padding: 24px;
 }
 
 .menu a{
     text-decoration: none;
+    align-items: center;
     color: #fff;
     font-size: 18px;
     letter-spacing: 2px;
-    display: list-item;
-    padding: 50px;
+    padding: 20px;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
+    display: inline-block;
 
 }
 .menu a:hover{
     background-color: darkblue;
     transition: 0.5s;
-    letter-spacing: 4px;
+    letter-spacing: 3px;
     text-transform: uppercase;
 }
